# objstore-wrapper

./: .gitignore  CMakeLists.txt  README.md
3rd/: CMakeLists.txt  s3.cmake
cmake/: aws-sdk-cpp.cmake
src/: CMakeLists.txt
src/bench/: get.cc  put.cc  put_get.cc
src/include/: local.h  obj_store.h  objstore.h  s3.h
src/lib/: local.cc  local.h  obj_store.cc  objstore.cc  objstore_test.cc  s3.cc  s3.h
